--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.moswords.devils_eye":"Devil's Eye",
   "item.moswords.saphire": "Saphire",
   "item.moswords.raw_saphire": "Raw Saphire",
+  "item.moswords.ruby_sword": "Ruby Sword",
 
   "block.moswords.saphire_ore": "Saphire Ore",
   "block.moswords.ruby_block": "Ruby Block",
