--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -5,9 +5,12 @@
   "item.moswords.saphire": "Saphire",
   "item.moswords.raw_saphire": "Raw Saphire",
   "item.moswords.ruby_sword": "Ruby Sword",
+  "item.moswords.big_ruby_sword": "Ruby Sword",
   "item.moswords.sun_sword": "Sun Sword",
   "item.moswords.devils_eye_sword": "Devil's Eye Sword",
   "item.moswords.moon_sword": "Moon Sword",
+  "item.moswords.saphire_sword": "Saphire Sword",
+  "item.moswords.thin_saphire_sword": "Thin Saphire Sword",
 
   "block.moswords.saphire_ore": "Saphire Ore",
   "block.moswords.ruby_block": "Ruby Block",
