bigger crafting table working, but the screen doesn't look good

--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -25,7 +25,7 @@
   "block.moswords.ruby_block": "Ruby Block",
   "block.moswords.sapphire_block": "Sapphire Block",
   "block.moswords.ruby_deepslate_ore": "Ruby Deepslate Ore",
-  "block.moswords.custom_crafting_table": "Custom Crafting Table",
+  "block.moswords.bigger_crafting_table": "Bigger Crafting Table",
 
   "enchantment.moswords.freezing": "Freezing",
 
