--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -22,6 +22,7 @@
   "item.moswords.handle": "Handle",
 
   "block.moswords.sapphire_ore": "Sapphire Ore",
+  "block.moswords.titanium_ore": "Titanium Ore",
   "block.moswords.ruby_block": "Ruby Block",
   "block.moswords.sapphire_block": "Sapphire Block",
   "block.moswords.ruby_deepslate_ore": "Ruby Deepslate Ore",
