--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -24,6 +24,7 @@
 
   "tooltip.moswords.bigger_crafting_table.tooltip": "A crafting table, but bigger ",
   "tooltip.moswords.press_shift.tooltip": "Press SHIFT for more info",
+  "tooltip.moswords.bat_wings.tooltip": "A 1 in 100 chance drop, why would it be this rare, you ask me? I don't know, I'm just a tooltip.",
 
   "block.moswords.sapphire_ore": "Sapphire Ore",
   "block.moswords.titanium_ore": "Titanium Ore",
