--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -35,7 +35,7 @@
   "block.moswords.ruby_deepslate_ore": "Ruby Deepslate Ore",
   "block.moswords.bigger_crafting_table": "Bigger Crafting Table",
 
-  "enchantment.moswords.freezing": "Freezing",
+  "enchantment.moswords.slowing": "Freezing",
 
 
   "itemgroup.moswords": "Mo'Swords"
