--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -35,6 +35,8 @@
   "block.moswords.ruby_deepslate_ore": "Ruby Deepslate Ore",
   "block.moswords.bigger_crafting_table": "Bigger Crafting Table",
 
+  "item.moswords.mercury_boots" : "Mercury Boots",
+
   "enchantment.moswords.slowing": "Freezing",
 
 
