--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.moswords.blood_bottle": "Blood Bottle",
   "item.moswords.wooden_dagger": "Wooden Dagger",
   "item.moswords.bloody_wooden_dagger": "Bloody Wooden Dagger",
+  "item.moswords.sorcerers_shoes": "Sorcerers Shoes",
 
   "tooltip.moswords.bigger_crafting_table.tooltip": "A crafting table, but bigger ",
   "tooltip.moswords.press_shift.tooltip": "Press SHIFT for more info",
