--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -26,6 +26,7 @@
   "item.moswords.sorcerers_shoes": "Sorcerer's Shoes",
   "item.moswords.berserkers_greaves": "Berserker's Greaves",
   "item.moswords.plated_steelcaps": "Plated Steelcaps",
+  "item.moswords.mercury_tread": "Mercury Tread",
 
   "tooltip.moswords.bigger_crafting_table.tooltip": "A crafting table, but bigger ",
   "tooltip.moswords.press_shift.tooltip": "Press SHIFT for more info",
