--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -27,6 +27,7 @@
   "item.moswords.berserkers_greaves": "Berserker's Greaves",
   "item.moswords.plated_steelcaps": "Plated Steelcaps",
   "item.moswords.mercury_treads": "Mercury Treads",
+  "item.moswords.iceborn_gauntlet": "Iceborn Gauntlet",
 
   "tooltip.moswords.bigger_crafting_table.tooltip": "A crafting table, but bigger ",
   "tooltip.moswords.press_shift.tooltip": "Press SHIFT for more info",
