--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -35,6 +35,7 @@
   "tooltip.moswords.press_shift.tooltip": "Press SHIFT for more info",
   "tooltip.moswords.bat_wings.tooltip": "A 1 in 100 chance drop, why would it be this rare, you ask me? I don't know, I'm just a tooltip.",
   "tooltip.moswords.refillable_potion": "A potion that heals you and can be used 3 times! What could go wrong? Right?",
+  "tooltip.moswords.wooden_dagger": "...What would happened if you kill someone with this?",
 
   "block.moswords.sapphire_ore": "Sapphire Ore",
   "block.moswords.titanium_ore": "Titanium Ore",
