--- a/src/main/resources/assets/moswords/lang/en_us.json
+++ b/src/main/resources/assets/moswords/lang/en_us.json
@@ -30,6 +30,7 @@
   "item.moswords.iceborn_gauntlet": "Iceborn Gauntlet",
   "item.moswords.refillable_potion_bottle": "Refillable Potion Bottle",
   "item.moswords.refillable_potion": "Refillable Potion",
+  "item.moswords.youmuus_ghostblade": "Youmuu's Ghostblade",
 
   "tooltip.moswords.bigger_crafting_table.tooltip": "A crafting table, but bigger ",
   "tooltip.moswords.press_shift.tooltip": "Press SHIFT for more info",
